# 60s-web

./: .gitignore  Dockerfile  config.json  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/models/: news_item.py
src/services/: fetch.py  generate.py
src/templates/: briefing.html
tests/integration/: test_briefing_generation.py
tests/unit/: test_fetch.py  test_generate.py
