[project]
name = "60s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "feedparser>=6.0.12",
    "jinja2>=3.1.6",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
